# goslinks

./: .coveragerc  .env-sample  .gitignore  .travis.yml  Dockerfile  README.md  pyproject.toml  tasks.py  zappa_callbacks.py  zappa_settings.json.enc
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml
goslinks/: app.py  cli.py  config.py  db.py  forms.py
goslinks/auth/: constants.py  decorators.py  loginpass.py  utils.py
goslinks/blueprints/: __init__.py  auth.py  google_oauth2.py  goslinks.py
goslinks/db/: factory.py  models.py
goslinks/db/migrations/: 0001_initial.py
goslinks/google_oauth2/: app.py  constants.py  decorators.py  utils.py
goslinks/helpers/: slug.py
goslinks/migrations/: 0001_initial.py
goslinks/templates/: edit.html  google_oauth2_error.html  home.html  links.html
test/: app_test_case.py  fake_pynamodb.py  test_auth.py  test_cli.py  test_forms.py  test_google_oauth2.py  test_helpers.py  test_models.py
test/blueprints/: test_auth.py  test_google_oauth2.py  test_goslinks.py
