[tool.poetry]
name = "goslinks"
version = "0.0.1"
description = "URL shortener for teams."
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1"
pynamodb = "^4.3"
authlib = "^0.14"
google-auth = "^1.20"
google-api-python-client = "^1.11"
python-dotenv = "^0.14.0"
Flask-Testing = "^0.8.0"
flask-wtf = "^0.14.3"
zappa = "^0.51.0"
loginpass = "^0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.2"
pyupgrade = "^2.7"
isort = "^5.5.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
