[tool.poetry]
name = "goslinks"
version = "0.0.1"
description = "URL shortener for teams."
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1"
pynamodb = "^5.0"
authlib = "^0.15"
google-auth = "^1.27"
google-api-python-client = "^1.12"
python-dotenv = "^0.15.0"
Flask-Testing = "^0.8.1"
flask-wtf = "^0.14.3"
zappa = "^0.52.0"
loginpass = "^0.5"

[tool.poetry.dev-dependencies]
coverage = "^5.4"
opstrich = "^0.3.1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
