[tool.poetry]
name = "goslinks"
version = "0.0.1"
description = "URL shortener for teams."
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1"
pynamodb = "^5.1"
authlib = "^0.15"
google-auth = "^2.3"
google-api-python-client = "^2.23"
python-dotenv = "^0.19.0"
Flask-Testing = "^0.8.1"
flask-wtf = "^0.15.1"
zappa = { git = "https://github.com/zappa/Zappa.git", rev = "89e99174ded0abdcbc5740c57c25baf93e55d468" }
loginpass = "^0.5"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
opstrich = "^0.6.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
